tdf#120225 ww8import: keep textform name

A bookmark cross-reference was trying to access the textform
field by name, but an autogenerated __Fieldmark__ name obviously
wasn't matching.

Change-Id: I1018fecf44fda5d947b214c599f1a405f311e2ee
Reviewed-on: https://gerrit.libreoffice.org/61565
Reviewed-by: Justin Luth <justin_luth@sil.org>
Tested-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 4af4a473daf8b2530e6b6f5e49c7f4e3413f8378)